# plutus-serializer

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cabal.project  plutus-serializer.cabal
dist-newstyle/cache/: compiler  config  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/src/: cardano-l_-793ecdcee1fc1ce7.cache  gimbalabs_-bb16c070aa53e0e6.cache  plutonomy-ac59ae9d8873139d.cache  plutus-ap_-cbcc5c6ab544aad6.cache
src/Plutus/: Serializer.hs
